sfSandBoxCode/force-app/main/default/objects/Casual_Job_Line_Item__c/Casual_Job_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Contractor Job Specification</label>
    <nameField>
        <displayFormat>JOB-SPEC-{0000}</displayFormat>
        <label>Job Specification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Specifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>