sfSandBoxCode/force-app/main/default/objects/Casual_Job_Line_Item__c/fields/Allowance_Description__c.field-meta.xml
<CustomField>
    <fullName>Allowance_Description__c</fullName>
    <label>Allowance Description</label>
    <length>200</length>
    <type>Text</type>
</CustomField>