sfSandBoxCode/force-app/main/default/objects/Casual_Job_Line_Item__c/fields/Allowance_Per_Person__c.field-meta.xml
<CustomField>
    <fullName>Allowance_Per_Person__c</fullName>
    <label>Total Allowance Per Contractor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>