sfSandBoxCode/force-app/main/default/objects/Casual_Job_Line_Item__c/fields/Assignments__c.field-meta.xml
<CustomField>
    <fullName>Assignments__c</fullName>
    <label>Assignments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>