sfSandBoxCode/force-app/main/default/objects/Casual_Job_Line_Item__c/fields/Casuals_Job__c.field-meta.xml
<CustomField>
    <fullName>Casuals_Job__c</fullName>
    <label>Contractors Job</label>
    <referenceTo>Casuals_Job__c</referenceTo>
    <relationshipName>Casual_Job_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>