sfSandBoxCode/force-app/main/default/objects/Casual_Job_Line_Item__c/fields/Department_Dim_1__c.field-meta.xml
<CustomField>
    <fullName>Department_Dim_1__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to dimension 1 records on config object</description>
    <label>Dim 1</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>FFA_Config_Object__c.Type__c</field>
            <operation>equals</operation>
            <value>dim1</value>
        </filterItems>
        <filterItems>
            <field>FFA_Config_Object__c.Name</field>
            <operation>notContain</operation>
            <value>XXX</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>FFA_Config_Object__c</referenceTo>
    <relationshipName>Casual_Job_Line_Items</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>