sfSandBoxCode/force-app/main/default/objects/Casual_Job_Line_Item__c/fields/Dim3__c.field-meta.xml
<CustomField>
    <fullName>Dim3__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Dim 3</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>FFA_Config_Object__c.Type__c</field>
            <operation>equals</operation>
            <value>dim3</value>
        </filterItems>
        <filterItems>
            <field>FFA_Config_Object__c.Name</field>
            <operation>notContain</operation>
            <value>DO NOT USE</value>
        </filterItems>
        <filterItems>
            <field>FFA_Config_Object__c.Name</field>
            <operation>notContain</operation>
            <value>XXX</value>
        </filterItems>
        <filterItems>
            <field>FFA_Config_Object__c.isActive__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>FFA_Config_Object__c</referenceTo>
    <relationshipLabel>Job Specifications (Dim 3)</relationshipLabel>
    <relationshipName>Casual_Job_Specifications</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>