sfSandBoxCode/force-app/main/default/objects/Casual_Job_Line_Item__c/fields/General_Description__c.field-meta.xml
<CustomField>
    <fullName>General_Description__c</fullName>
    <inlineHelpText>General description about the Job specificaton</inlineHelpText>
    <label>General Description</label>
    <type>TextArea</type>
</CustomField>