sfSandBoxCode/force-app/main/default/objects/Casual_Job_Line_Item__c/fields/GLA__c.field-meta.xml
<CustomField>
    <fullName>GLA__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>GLA</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>FFA_Config_Object__c.Type__c</field>
            <operation>equals</operation>
            <value>gla</value>
        </filterItems>
        <filterItems>
            <field>FFA_Config_Object__c.Name</field>
            <operation>notContain</operation>
            <value>DO NOT USE</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>FFA_Config_Object__c</referenceTo>
    <relationshipLabel>Job Specifications (GLA)</relationshipLabel>
    <relationshipName>Job_Specifications</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>