sfSandBoxCode/force-app/main/default/objects/Casual_Job_Line_Item__c/fields/Grant_Dim_4__c.field-meta.xml
<CustomField>
    <fullName>Grant_Dim_4__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Dim 4</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>FFA_Config_Object__c.Type__c</field>
            <operation>equals</operation>
            <value>dim4</value>
        </filterItems>
        <filterItems>
            <field>FFA_Config_Object__c.Name</field>
            <operation>notContain</operation>
            <value>XXX</value>
        </filterItems>
        <filterItems>
            <field>FFA_Config_Object__c.isActive__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>FFA_Config_Object__c.Name</field>
            <operation>notContain</operation>
            <value>DO NOT USE</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>FFA_Config_Object__c</referenceTo>
    <relationshipLabel>Job Specifications (Dim 4)</relationshipLabel>
    <relationshipName>Casual_Job_Line_Items2</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>