sfSandBoxCode/force-app/main/default/objects/Casual_Job_Line_Item__c/fields/Location_Dim_2__c.field-meta.xml
<CustomField>
    <fullName>Location_Dim_2__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Dim 2</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>FFA_Config_Object__c.Type__c</field>
            <operation>equals</operation>
            <value>dim2</value>
        </filterItems>
        <filterItems>
            <field>FFA_Config_Object__c.Name</field>
            <operation>notContain</operation>
            <value>XXX</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>FFA_Config_Object__c</referenceTo>
    <relationshipName>Casual_Job_Line_Items1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>