sfSandBoxCode/force-app/main/default/objects/Casual_Job_Line_Item__c/fields/Number_Of_Casuals__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Casuals__c</fullName>
    <label>Number Of Contractors</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>