sfSandBoxCode/force-app/main/default/objects/Casual_Job_Line_Item__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <inlineHelpText>Number of Days,Months OR Hours</inlineHelpText>
    <label>Number Of Rate Units</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>