sfSandBoxCode/force-app/main/default/objects/Casual_Job_Line_Item__c/fields/Rate_Units__c.field-meta.xml
<CustomField>
    <fullName>Rate_Units__c</fullName>
    <label>Rate Units</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Per Hour</fullName>
            </value>
            <value>
                <fullName>Per Day</fullName>
            </value>
            <value>
                <fullName>Per Week</fullName>
            </value>
            <value>
                <fullName>Per Month</fullName>
            </value>
            <value>
                <fullName>Per Job</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>