sfSandBoxCode/force-app/main/default/objects/Casual_Job_Line_Item__c/fields/Suggest_Contractors__c.field-meta.xml
<CustomField>
    <fullName>Suggest_Contractors__c</fullName>
    <inlineHelpText>Give details of the contractor(s) you would like to be considered for this Job Specification</inlineHelpText>
    <label>Suggest Contractors</label>
    <type>TextArea</type>
</CustomField>