sfSandBoxCode/force-app/main/default/objects/Casual_Job_Line_Item__c/fields/Total_Allowance__c.field-meta.xml
<CustomField>
    <fullName>Total_Allowance__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Allowance</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>