sfSandBoxCode/force-app/main/default/objects/Casual_Job_Line_Item__c/fields/Total_Allowances__c.field-meta.xml
<CustomField>
    <fullName>Total_Allowances__c</fullName>
    <label>Total Allowances</label>
    <summarizedField>Casual_Job_Allowance__c.Total_Amount__c</summarizedField>
    <summaryForeignKey>Casual_Job_Allowance__c.Casual_Job_Line_Item__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>