sfSandBoxCode/force-app/main/default/objects/Casual_Job_Line_Item__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <formula>Payment_Amount__c  + Total_Allowance__c</formula>
    <label>Projected Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>