sfSandBoxCode/force-app/main/default/objects/Casual_Job_Line_Item__c/validationRules/AllowanceDescriptionValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>AllowanceDescriptionValidation</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISNULL( Allowance_Description__c ), 
  NOT(ISNULL( Allowance_Per_Person__c ) ) 
  )</errorConditionFormula>
    <errorDisplayField>Allowance_Description__c</errorDisplayField>
    <errorMessage>Please give Allowance Description</errorMessage>
</ValidationRule>