sfSandBoxCode/force-app/main/default/objects/Casual_Job_Line_Item__c/validationRules/End_date_not_less_than_start_date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_date_not_less_than_start_date</fullName>
    <active>true</active>
    <errorConditionFormula>Start_Date__c &gt;  End_Date__c</errorConditionFormula>
    <errorMessage>End date cannot be less than start date</errorMessage>
</ValidationRule>