sfSandBoxCode/force-app/main/default/objects/Casual_Job_Line_Item__c/validationRules/End_date_not_more_than_Job_end.validationRule-meta.xml
<ValidationRule>
    <fullName>End_date_not_more_than_Job_end</fullName>
    <active>true</active>
    <errorConditionFormula>End_Date__c  &gt;  Casuals_Job__r.End_Date__c</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>End date cannot be more than the end date of the Job</errorMessage>
</ValidationRule>