sfSandBoxCode/force-app/main/default/objects/Casual_Job_Line_Item__c/validationRules/Job_Specification_lock_after_approval.validationRule-meta.xml
<ValidationRule>
    <fullName>Job_Specification_lock_after_approval</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(  Casuals_Job__r.Status__c, &quot;Approved&quot;)
)</errorConditionFormula>
    <errorMessage>This job request has been approved and hence cannot be modified</errorMessage>
</ValidationRule>