sfSandBoxCode/force-app/main/default/objects/Casual_Job_Line_Item__c/validationRules/Quantity_not_less_than_1.validationRule-meta.xml
<ValidationRule>
    <fullName>Quantity_not_less_than_1</fullName>
    <active>true</active>
    <errorConditionFormula>Quantity__c &lt; 1</errorConditionFormula>
    <errorDisplayField>Quantity__c</errorDisplayField>
    <errorMessage>Quantity cannot be less than 1</errorMessage>
</ValidationRule>