sfSandBoxCode/force-app/main/default/objects/Casual_Job_Line_Item__c/validationRules/Start_date_not_less_that_Job_start.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_date_not_less_that_Job_start</fullName>
    <active>true</active>
    <errorConditionFormula>Start_Date__c &lt; Casuals_Job__r.Start_Date__c</errorConditionFormula>
    <errorDisplayField>Start_Date__c</errorDisplayField>
    <errorMessage>Start date cannot be less than the start date of the Job</errorMessage>
</ValidationRule>